# fastapi-demo

./: README.md  pyproject.toml  requirements.txt
fastapi-demo/: main.py  test_main.py
tests/: test_main.py
