[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["JianHong <leejianhong1@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi-demo"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.0"}
uvicorn = {extras = ["standard"], version = "^0.23.1"}
httpx = "^0.24.1"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
